examples/test/testpolicy6893.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6893
  namespace: namespace269
spec:
  podSelector:
    matchLabels:
      key2: value3
      key38: value30
      key49: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value4
      podSelector:
        matchLabels:
          key2: value13
          key36: value22
